--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,6 @@
-<mat-toolbar>
-    <h1>StyleStreet</h1>
-    <a routerLink="/home">Home</a>
-    <a routerLink="/store">Store</a>
+<mat-toolbar class="sticky-header" color="primary">
+    <mat-icon fontIcon="local_mall"></mat-icon>
+    <span class="mat-h1 mx-3">StyleStreet</span>
+    <a mat-button routerLink="/home">Home</a>
+    <a mat-button routerLink="/store">Store</a>
 </mat-toolbar>
