--- a/src/app/features/home/components/category-tile/category-tile.component.html
+++ b/src/app/features/home/components/category-tile/category-tile.component.html
@@ -1,4 +1,2 @@
-
-<img [src]="category?.image" [alt]="category?.name">
-<h3 class="m-0 mt-2">{{ category?.name }}</h3>
-
+<img [src]="category.image" [alt]="category.name">
+<h3 class="m-0 mt-2">{{ category.name }}</h3>
