admin panel & product form

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -3,4 +3,5 @@
     <span class="mat-h1 mx-3">StyleStreet</span>
     <a mat-button routerLink="/home">Home</a>
     <a mat-button routerLink="/store">Store</a>
+    <a mat-button routerLink="/admin">Admin</a>
 </mat-toolbar>
