--- a/src/app/features/products-list/components/product-tile/product-tile.component.html
+++ b/src/app/features/products-list/components/product-tile/product-tile.component.html
@@ -1,1 +1,2 @@
-<h3 class="m-0 mt-2">{{ product?.title }}</h3>
+<img [src]="product.image" [alt]="product.title">
+<h3 class="m-0 mt-2">{{ product.title }}</h3>
