--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,10 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$custom-typography: mat.define-typography-config(
+  $font-family: Dosis
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
@@ -26,7 +30,7 @@ $StyleStreet-theme: mat.define-light-theme((
     accent: $StyleStreet-accent,
     warn: $StyleStreet-warn,
   ),
-  typography: mat.define-typography-config(),
+  typography: $custom-typography,
   density: 0
 ));
 
