--- a/src/app/features/admin-panel/components/add-product-form/add-product-form.component.html
+++ b/src/app/features/admin-panel/components/add-product-form/add-product-form.component.html
@@ -1,30 +1,51 @@
-<h3>Add product</h3>
-<form [formGroup]="productForm" (ngSubmit)="onSubmit(productFormDirective)" #productFormDirective="ngForm">
-    <div class="d-flex flex-column">
-        <mat-form-field>
-            <mat-label>Title</mat-label>
-            <input matInput formControlName="title">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Price</mat-label>
-            <input matInput type="number" formControlName="price">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Category</mat-label>
-            <mat-select formControlName="category">
-                @for (category of categories; track category.id) {
-                    <mat-option [value]="category.id">{{ category.name }}</mat-option>
-                }
-            </mat-select>
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Image</mat-label>
-            <input matInput formControlName="image">
-        </mat-form-field>
-        <mat-form-field>
-            <mat-label>Description</mat-label>
-            <input matInput formControlName="description">
-        </mat-form-field>
-        <button type="submit" mat-flat-button [disabled]="productForm.invalid">Submit</button>
-    </div>    
-</form>
+<h3 mat-dialog-title>Add product</h3>
+<mat-dialog-content>
+    <form [formGroup]="productForm" (ngSubmit)="onSubmit(productFormDirective)" #productFormDirective="ngForm">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <mat-form-field>
+                        <mat-label>Title</mat-label>
+                        <input matInput formControlName="title">
+                    </mat-form-field>
+                </div>
+                <div class="col">
+                    <mat-form-field>
+                        <mat-label>Price</mat-label>
+                        <input matInput type="number" formControlName="price">
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <mat-form-field>
+                        <mat-label>Category</mat-label>
+                        <mat-select formControlName="category">
+                            @for (category of categories; track category.id) {
+                                <mat-option [value]="category.id">{{ category.name }}</mat-option>
+                            }
+                        </mat-select>
+                    </mat-form-field>
+                </div>
+                <div class="col">
+                    <mat-form-field>
+                        <mat-label>Image</mat-label>
+                        <input matInput formControlName="image">
+                    </mat-form-field>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <mat-form-field>
+                        <mat-label>Description</mat-label>
+                        <input matInput formControlName="description">
+                    </mat-form-field>
+                </div>
+            </div> 
+        </div>
+            
+        <mat-dialog-actions>
+            <button type="submit" mat-button [disabled]="productForm.invalid">Submit</button>
+        </mat-dialog-actions>
+    </form>
+</mat-dialog-content>
