--- a/src/app/features/products-list/components/product-tile/product-tile.component.html
+++ b/src/app/features/products-list/components/product-tile/product-tile.component.html
@@ -1,2 +1,5 @@
 <img [src]="product.image" [alt]="product.title">
+<div class="d-flex justify-content-end w-100">
+    <p class="price-label">${{ product.price }}</p>
+</div>
 <h3 class="m-0 mt-2">{{ product.title }}</h3>
