--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="sticky-header" color="primary">
+<mat-toolbar class="sticky-header">
     <mat-icon fontIcon="local_mall"></mat-icon>
     <span class="mat-h1 mx-3">StyleStreet</span>
     <a mat-button routerLink="/home">Home</a>
