--- a/src/app/features/admin-panel/pages/admin-view/admin-view.component.html
+++ b/src/app/features/admin-panel/pages/admin-view/admin-view.component.html
@@ -1,6 +1,7 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-4">
     <h2>Admin panel</h2>
 </div>
+
 <div class="container">
     <div class="d-flex justify-content-end px-2 py-4">
         <button mat-raised-button (click)="openAddProductDialog()">Add product</button>
