--- a/src/app/features/products-list/components/product-tile/product-tile.component.scss
+++ b/src/app/features/products-list/components/product-tile/product-tile.component.scss
@@ -1,11 +1,16 @@
 :host {
-    border: 1px solid #9c9c9c;
-    border-radius: 8px;
-    box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.2); 
+    box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.5);
+    width: 18em;
+}
+
+:host:hover {
+    box-shadow: 6px 10px 18px rgba(0, 0, 0, 0.6);
+    transition: 0.4s;
+    cursor: pointer;
 }
 
 img {
-    width: 200px;
+    width: 100%;
     height: 200px;
     object-fit: cover;
 }
