--- a/src/app/features/products-list/components/products-list-filter/products-list-filter.component.html
+++ b/src/app/features/products-list/components/products-list-filter/products-list-filter.component.html
@@ -4,6 +4,7 @@
         <mat-form-field>
             <mat-label>Category</mat-label>
                 <mat-select (selectionChange)="categoryChanged()" formControlName="category">
+                    <mat-option value="-1">All</mat-option>
                     @for (category of categories; track category.id) {
                         <mat-option [value]="category.id">{{ category.name }}</mat-option>
                     }
