--- a/src/app/features/products-list/pages/product-list-view/product-list-view.component.html
+++ b/src/app/features/products-list/pages/product-list-view/product-list-view.component.html
@@ -1,12 +1,30 @@
-<div class="d-flex justify-content-center">
+<div class="d-flex justify-content-center mt-4">
     <h2>Products</h2>
 </div>
 
+<div class="mb-4 px-4 py-2" app-products-list-filter></div>
+
 <div class="container">
-    <app-products-list-filter></app-products-list-filter>
-    <div class="row m-0 justify-content-start">
-        @for(product of products; track product) {
-            <div app-product-tile [product]="product" class="tile col-auto d-flex flex-column align-items-center m-4 px-4 pt-3 pb-4"></div>
+    <mat-paginator
+        [length]="products.length"
+        [pageSize]="20"
+        [pageSizeOptions]="[10, 20, 50]"
+        (page)="getPaginatorData($event)"
+        showFirstLastButtons>
+    </mat-paginator>
+    <div class="flex-box d-flex flex-wrap justify-content-start pb-4">
+        @for(product of (products | slice: lowValue : highValue); track product) {
+            <div app-product-tile [product]="product" class="tile col-auto d-flex flex-column align-items-center px-4 pt-3 pb-4"></div>
+        }
+        @empty {
+            <span>No products!</span>
         }
     </div>
+    <mat-paginator
+        [length]="products.length"
+        [pageSize]="20"
+        [pageSizeOptions]="[10, 20, 50]"
+        (page)="getPaginatorData($event)"
+        showFirstLastButtons>
+    </mat-paginator>
 </div>
