--- a/src/app/features/admin-panel/components/add-product-form/add-product-form.component.html
+++ b/src/app/features/admin-panel/components/add-product-form/add-product-form.component.html
@@ -45,6 +45,7 @@
         </div>
             
         <mat-dialog-actions>
+            <button mat-button mat-dialog-close>Cancel</button>
             <button type="submit" mat-button [disabled]="productForm.invalid">Submit</button>
         </mat-dialog-actions>
     </form>
