--- a/src/app/features/products-list/pages/product-details-view/product-details-view.component.html
+++ b/src/app/features/products-list/pages/product-details-view/product-details-view.component.html
@@ -1,2 +1,21 @@
-<p>product-details-view works!</p>
-<!-- MODAL -->
+<mat-dialog-content>
+    <button mat-icon-button mat-dialog-close class="close-button">
+        <mat-icon>close</mat-icon>
+    </button>
+    
+    <div class="row">
+        <div class="col-12 col-md-6">
+            <img class="img-fluid" [src]="product.image" [alt]="product.title">
+        </div>
+        <div class="col-12 col-md-6 px-4 py-2">
+            <h1>{{ product.title }}</h1>
+            <p class="price">${{ product.price }}</p>
+            <p>{{ category?.name }}</p>
+            <p>{{ product.description }}</p>
+            <button mat-fab extended color="primary">
+                <mat-icon>add_shopping_cart</mat-icon>
+                Add to cart
+            </button>
+        </div>
+    </div>
+</mat-dialog-content>
